Don't loose the comment closing character when formatting the XML code.

BUG: 118453